2006-02-12  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/stackTrace.c
	(printStackTrace): We handle now exceptions which are caused by some
	other in the backup print stack trace.
	
2006-02-12  Dalibor Topic  <robilad@kaffe.org>

	Fix for #16.

	* kaffe/kaffevm/string.c: (stringJava2C)
	Fixed conversion to C chars for Java unicode
	characters >= 127.

	* libraries/clib/io/File.c: Switched all functions
	to use JNI style declarations. Use GetStringUTFChars
	and ReleaseStringUTFChars to convert Java Strings
	to C chars. Code taken from GNU Classpath. Added
	FSF to copyright header.

	* libraries/javalib/external/classpath/gnu/java/net/protocol/file/Connection.java
	(unquote) Convert Java characters above 127 to UTF-8 rather than throwing an
	exception.

	* libraries/javalib/external/classpath/java/net/URLClassLoader.java
	(addURLImpl) Check if a file URL points to a directory before
	using a JarURLClassLoader.

2006-02-09  Dalibor Topic  <robilad@kaffe.org>

	Fix for #12.

	* kaffe/kaffeh/main.c: (options) Handle -force.
	(usage) Document -force.

2006-02-09  Dalibor Topic  <robilad@kaffe.org>

	Fix for #15.

	* libraries/javalib/vmspecific/gnu/classpath/VMSystemProperties.java:
	Check if there is a file encoding specified in the locale, and set
	file.encoding property to it if it is.
 
2006-02-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/vmspecific/gnu/crypto/Properties.java,
	libraries/javalib/vmspecific/gnu/crypto/Registry.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/Assembly.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/Cascade.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/CascadeStage.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/CascadeTransformer.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/DeflateTransformer.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/Direction.java,
	libraries/javalib/vmspecific/gnu/crypto/assembly/LoopbackTransformer.java,